# wolverine-demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  changelog.md  compute_label.py  conanfile.txt  dates.txt  factor_ic.py  factor_ic_yearly.ipynb  factor_neutralize.py  run_build.sh  run_parallel.py
cmake/: version.cmake
data/insinfo/: 20220104.csv  20220105.csv  20220106.csv  20220107.csv  20220110.csv  20220111.csv  20220112.csv  20220113.csv  20220114.csv  20220117.csv  20220118.csv  20220119.csv  20220120.csv  20220121.csv  20220124.csv  20220125.csv  20220126.csv  20220127.csv  20220128.csv  20220207.csv  20220208.csv  20220209.csv  20220210.csv  20220211.csv  20220214.csv  20220215.csv  20220216.csv  20220217.csv  20220218.csv  20220221.csv  (+259 more)
demos/: README.md
docs/: QA.md  README.md  cs_ic_calculator.md  data_format.md  env_guidelines.md  faq.md  guidelines.md  prodcache_guidelines.md  production.md  quick_start.md  quick_start_CN.md  roadmap.md  tutorial-old.md  tutorial.md
results/: ic_obi_last.json  ic_obi_mean.json  ic_obi_skew.json  ic_obi_twa.json
scripts/: ChinaTradingDates.txt  collect_artifacts.py  convert_ts_sig2cs_sig.py  gen_insinfo.py  install.sh  install_wlsim.py  npy_dumper.py  readme.md  run_cs_edge_calculator.py  run_cs_ic_calculator.py  run_cs_pnl_calculator.py  run_cs_pnl_stats.py  run_edge_calculator.py  run_edge_plot.py  run_ic_calculator.py  run_pnl_calculator.py  run_pnl_stats.py  run_sig_stats.py  run_t0_stats.py  run_t0_stats_calculator.py  uninstall.sh  validate_checkpoint.py  validate_signal_reader.py
src/: README.md
(+312 files in other folders)
